# mall-admin-api

./: .env  .env.example  Dockerfile  README.md  generate_password.py  init_admin.sql  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
app/: __init__.py  main.py  utils.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: after_sales.py  auth.py  orders.py  products.py  statistics.py  users.py
app/core/: config.py  redis.py  security.py
app/crud/: __init__.py  after_sale.py  base.py  order.py  product.py  statistics.py  user.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  after_sale.py  base.py  order.py  product.py  statistics.py  user.py
app/schemas/: __init__.py  after_sale.py  msg.py  order.py  product.py  statistics.py  token.py  user.py
app/services/: after_sale.py  order.py  product.py  statistics.py  user.py
app/tasks/: celery_app.py  statistics.py
app/utils/: email.py
mall_admin_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
